adjusted styled on home page

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="theme-color" content="#000000" />
 		<meta name="description" content="NFL matchup stat comparison tool" />
-
+		<link
+			href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,400;0,600;1,300;1,600&family=Overpass:ital@0;1&display=swap"
+			rel="stylesheet"
+		/>
 		<title>BetBro</title>
 	</head>
 	<body>
