--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 		<!-- A little help for the Netlify post-processing bots -->
-		<form name="contact" netlify hidden>
+		<form name="contact" data-netlify-recaptcha="true" netlify hidden>
 			<input type="text" name="name" />
 			<input type="email" name="email" />
 			<textarea name="message"></textarea>
