--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
 		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="NFL matchup stat comparison tool" />
+		<meta
+			name="description"
+			content="Get the edge on your NFL bets with BETBRO - the matchup stat comparison tool."
+		/>
 		<script src="https://www.google.com/recaptcha/api.js"></script>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,400;0,600;1,300;1,600&family=Overpass:ital@0;1&display=swap"
