--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 			href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,400;0,600;1,300;1,600&family=Overpass:ital@0;1&display=swap"
 			rel="stylesheet"
 		/>
-		<title>BetBro</title>
+		<title>BetBro - The NFL Matchup Stat Comparison Tool</title>
 	</head>
 	<body>
 		<!-- A little help for the Netlify post-processing bots -->
