deferred scripts in head tag to improve load time

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,9 @@
 		<script
 			async
 			src="https://www.googletagmanager.com/gtag/js?id=UA-165914460-2"
+			defer="true"
 		></script>
-		<script>
+		<script defer="true">
 			window.dataLayer = window.dataLayer || [];
 			function gtag() {
 				dataLayer.push(arguments);
@@ -24,12 +25,7 @@
 			name="description"
 			content="Get the edge on your NFL bets with BETBRO - the matchup stat comparison tool."
 		/>
-		<script
-			data-ad-client="ca-pub-2452837332673156"
-			async
-			src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
-		></script>
-		<script src="https://www.google.com/recaptcha/api.js"></script>
+		<script src="https://www.google.com/recaptcha/api.js" defer="true"></script>
 		<link
 			href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,400;0,600;1,300;1,600&family=Overpass:ital@0;1&display=swap"
 			rel="stylesheet"
