--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script
-			async
-			src="https://www.googletagmanager.com/gtag/js?id=UA-165914460-2"
-			defer="true"
-		></script>
-		<script defer="true">
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag('js', new Date());
+  <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-165914460-2"
+      defer="true"
+    ></script>
+    <script defer="true">
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag('js', new Date());
 
-			gtag('config', 'UA-165914460-2');
-		</script>
+      gtag('config', 'UA-165914460-2');
+    </script>
 
-		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="theme-color" content="#000000" />
-		<meta
-			name="description"
-			content="Get the edge on your NFL bets with BETBRO - the matchup stat comparison tool."
-		/>
-		<script src="https://www.google.com/recaptcha/api.js" defer="true"></script>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,400;0,600;1,300;1,600&family=Overpass:ital@0;1&display=swap"
-			rel="stylesheet"
-		/>
-		<title>BetBro - The NFL Matchup Stat Comparison Tool</title>
-	</head>
-	<body>
-		<!-- A little help for the Netlify post-processing bots -->
-		<form name="contact" data-netlify-recaptcha="true" netlify hidden>
-			<input type="text" name="name" />
-			<input type="email" name="email" />
-			<textarea name="message"></textarea>
-		</form>
-		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="root"></div>
-	</body>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Get the edge on your NFL bets with BETBRO - the matchup stat comparison tool."
+    />
+    <meta name="og:image" content="/images/og-image.png" />
+    <script src="https://www.google.com/recaptcha/api.js" defer="true"></script>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,400;0,600;1,300;1,600&family=Overpass:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
+    <title>BetBro - The NFL Matchup Stat Comparison Tool</title>
+  </head>
+  <body>
+    <!-- A little help for the Netlify post-processing bots -->
+    <form name="contact" data-netlify-recaptcha="true" netlify hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
